--- a/packages/backend/config.env
+++ b/packages/backend/config.env
@@ -1,16 +1,16 @@
-# Firebase Functions Environment Variables
 # Database Configuration - Use Supabase PostgreSQL
 DATABASE_URL="postgresql://postgres.tfdheobalbfnrluuuhth:[YOUR-PASSWORD]@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1&pool_timeout=0"
 
-# Environment
-NODE_ENV=production
+# Server Configuration
+PORT=3001
+NODE_ENV=development
 
 # CORS Configuration
-CORS_ORIGIN=https://your-frontend-domain.web.app
+CORS_ORIGIN=http://localhost:3000
 
-# Puppeteer Configuration (for Firebase Functions)
+# Puppeteer Configuration
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=30000
 
-# Firebase Configuration
-FIREBASE_PROJECT_ID=your-project-id
+# Firebase Configuration (for development)
+FIREBASE_PROJECT_ID=tienziven-bypass-tool
