--- a/packages/backend/config.env.example
+++ b/packages/backend/config.env.example
@@ -1,5 +1,5 @@
-# Database Configuration
-DATABASE_URL="postgresql://postgres:password@localhost:5432/bypass_tool_pro?schema=public"
+# Database Configuration - Use Supabase PostgreSQL
+DATABASE_URL="postgresql://postgres.tfdheobalbfnrluuuhth:[YOUR-PASSWORD]@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1&pool_timeout=0"
 
 # Server Configuration
 PORT=3001
@@ -11,3 +11,6 @@ CORS_ORIGIN=http://localhost:3000
 # Puppeteer Configuration
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=30000
+
+# Firebase Configuration (for development)
+FIREBASE_PROJECT_ID=your-project-id
