--- a/firebase.json
+++ b/firebase.json
@@ -4,17 +4,43 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "packages/backend/**",
+      "packages/frontend/src/**"
     ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(js|css)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
+          }
+        ]
+      }
     ]
   },
   "functions": {
     "source": "packages/backend/firebase-functions",
-    "runtime": "nodejs18"
+    "runtime": "nodejs18",
+    "memory": "1GB",
+    "timeoutSeconds": 300
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
