--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,19 +1,24 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "description": "",
+    "description": "Bypass Tool Pro Backend - Fastify API with Prisma",
     "main": "dist/index.js",
     "type": "commonjs",
     "scripts": {
         "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "db:generate": "prisma generate",
+        "db:push": "prisma db push",
+        "db:migrate": "prisma migrate dev",
+        "db:studio": "prisma studio"
     },
-    "keywords": [],
+    "keywords": ["seo", "ranking", "fastify", "prisma"],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@fastify/cors": "^9.0.1",
+        "@prisma/client": "^5.17.0",
         "bluebird": "^3.7.2",
         "dotenv": "^16.4.5",
         "fastify": "^4.28.1",
@@ -24,6 +29,7 @@
     "devDependencies": {
         "concurrently": "^9.2.0",
         "nodemon": "^3.0.2",
+        "prisma": "^5.17.0",
         "typescript": "^5.5.3"
     }
 }
