--- a/packages/backend/firebase-functions/config.env
+++ b/packages/backend/firebase-functions/config.env
@@ -1,19 +1,18 @@
+# Firebase Functions Environment Variables
 # Database Configuration - Use Supabase PostgreSQL
-# Lấy mật khẩu từ: Supabase Dashboard > Settings > Database > Database Password
 DATABASE_URL="postgresql://postgres.tfdheobalbfnrluuuhth:2a3a4fea40a5d1b6bcf7cdbd24cc57c55948c5ad@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1&pool_timeout=0"
 
-# Server Configuration
-PORT=3001
-NODE_ENV=development
+# Environment
+NODE_ENV=production
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://tienziven-bypass-tool.web.app
 
-# Puppeteer Configuration
+# Puppeteer Configuration (for Firebase Functions)
 PUPPETEER_HEADLESS=true
 PUPPETEER_TIMEOUT=30000
 
-# Firebase Configuration (for development)
+# Firebase Configuration
 FIREBASE_PROJECT_ID=tienziven-bypass-tool
 
 # Supabase Configuration
