--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "type": "commonjs",
     "scripts": {
-        "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
+        "dev": "nodemon --exec ts-node src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
         "db:generate": "prisma generate",
@@ -24,8 +24,9 @@
     "dependencies": {
         "@fastify/cors": "^9.0.1",
         "@prisma/client": "^5.22.0",
+        "@supabase/supabase-js": "^2.56.0",
         "bluebird": "^3.7.2",
-        "dotenv": "^16.4.5",
+        "dotenv": "^16.6.1",
         "fastify": "^4.28.1",
         "firebase-admin": "^12.0.0",
         "lodash-es": "^4.17.21",
@@ -35,6 +36,7 @@
         "concurrently": "^9.2.0",
         "nodemon": "^3.0.2",
         "prisma": "^5.22.0",
+        "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
     }
 }
